<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600dp"
    android:layout_height="380dp"
    android:background="@color/dialog_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/new_custom_theme_text"
        android:layout_width="match_parent"
        android:layout_height="34sp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:text="@string/new_custom_theme"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/new_theme_edit"
        android:layout_width="220dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/background_edit_rounded"
        android:autoText="true"
        android:editable="true"
        android:hint="@string/new_theme"
        android:maxLength="250"
        android:singleLine="true"
	android:ellipsize="end"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <View
        style="@style/menu_separate_line_style" />

    <GridView
        android:id="@+id/theme_icon_grid"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:gravity="center"
        android:numColumns="4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/theme_icon_grid"
        android:paddingTop="14dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="24dp"
            style="@org.droidtv.ui.tvwidget2k15:style/button_style"
            android:minHeight="26dp"
            android:minWidth="110dp"
            android:text="@string/dialog_button_cancel"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="24dp"
            style="@org.droidtv.ui.tvwidget2k15:style/button_style"
            android:minHeight="26dp"
            android:minWidth="110dp"
            android:text="@string/dialog_button_ok"
            android:textAllCaps="false"/>
    </RelativeLayout>

</LinearLayout>