<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="620dp"
    android:layout_height="180dp"
    android:background="@color/dialog_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/delete_list_text"
        android:layout_width="match_parent"
        android:layout_height="34sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/delete_list_dialog_title"
        android:gravity="center_vertical"
        android:textSize="18sp" />

    <View
        style="@style/menu_separate_line_style" />

    <TextView
        android:id="@+id/check_delete_content_text"
        android:layout_width="match_parent"
        android:layout_height="34sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="20dp"
            android:text="@string/dialog_button_cancel"
            android:minHeight="24dp"
            android:minWidth="100dp"
            style="@org.droidtv.ui.tvwidget2k15:style/button_style"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="20dp"
            android:text="@string/dialog_button_delete"
            android:minHeight="24dp"
            android:minWidth="100dp"
            style="@org.droidtv.ui.tvwidget2k15:style/button_style"
            android:textAllCaps="false" />
    </RelativeLayout>

</LinearLayout>
